--- a/index.html
+++ b/index.html
@@ -11,34 +11,61 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
-  <body>
-    <div class="container">
-      <div class="qr-image">
-        <img src="./images/image-qr-code.png" alt="QR Code" />
+  <body
+    class="container align-items-center"
+    style="background-color: rgb(184, 197, 221)"
+  >
+    <div
+      class="row justify-content-center align-items-center h-100 w-100"
+      style="
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        background-color: rgb(216, 216, 223);
+      "
+    >
+      <div class="card max-auto p-3 rounded-4" style="width: 18rem">
+        <img
+          src="./images/image-qr-code.png"
+          class="card-img-top rounded-4"
+          alt="Qr-Code image"
+        />
+        <div class="card-body">
+          <h3
+            class="card-title text-center fs-6 mb-0"
+            style="font-weight: bold; font-family: Outfit"
+          >
+            Improve your front-end skills by building projects
+          </h3>
+          <br />
+          <p
+            class="card-text opacity-50 text-center m-0"
+            style="font-family: Outfit"
+          >
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-      <!-- CARD BODY  -->
-      <div class="card-body">
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Manasa Madhihalli Swamy</a>.
     </div>
   </body>
 </html>
